--- a/Rwork/Supplement_3_Rework.Rmd
+++ b/Rwork/Supplement_3_Rework.Rmd
@@ -36,14 +36,15 @@ relevant packages and data
 ````{r}
 library(phytools)
 library(nlme)
+library(vegan)
 ````
 
 dataframes and trees
 
 ````{r}
-df<-read.csv("~S5-primdfall.csv")
-tree<-read.nexus("~treeall.nex")
-treenoT<-read.nexus("~treenoT.nex")
+df<-read.csv("~/S5-primdfall.csv")
+tree<-read.nexus("~/treeall.nex")
+treenoT<-read.nexus("~/treenoT.nex")
 ````
 
 Prep the data for analysis
@@ -70,6 +71,7 @@ colnames(dtfnoT)<-c(colnames(dtf[,1:22]),"Species")
 dtf<-data.frame(scale(dtf[,1:22]),dtf[,23])
 colnames(dtf)<-c(colnames(dtf[,1:22]),"Species")
 ````
+
 Generate the Mass Data Set
 This has notes on the changes discussed above
 ````{r}
@@ -117,11 +119,11 @@ for(i in 3:22)
 	 	      } 
 	 	 }else
 	 	{
-	 	 t1<-try(gls(v~Mass,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
+	 	 t1<-try(gls(v~Mass,correlation=corPagel(1,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 if(loadError==F)
 	 		{
-	 		 free.lambda<-gls(v~Mass,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
+	 		 free.lambda<-gls(v~Mass,correlation=corPagel(1,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
 	 		l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -139,11 +141,11 @@ for(i in 3:22)
 	 	      } 
 	 		 }else
 	 		{
-	 		 t1<-try(gls(v~Mass,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
+	 		 t1<-try(gls(v~Mass,correlation=corPagel(0,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
 	 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 	 if(loadError==F)
 	 			{
-	 		  	 free.lambda<-gls(v~Mass,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
+	 		  	 free.lambda<-gls(v~Mass,correlation=corPagel(0,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
 	 		  	 l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -161,7 +163,7 @@ for(i in 3:22)
 	 	      } 
 	 			}else
 	 			{
-	 			 free.lambda<-gls(v~Mass,correlation=corPagel(l,phy=tree,form=~Species,fixed=TRUE),method="ML",dtf)
+	 			 free.lambda<-fix.lambda
 	 			}
 	 	 	}
 	 	}
@@ -255,11 +257,11 @@ for(i in 4:22)
 	 	      } 
 	 	 }else
 	 	{
-	 	 t1<-try(gls(v~Canine,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
+	 	 t1<-try(gls(v~Canine,correlation=corPagel(1,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 if(loadError==F)
 	 		{
-	 		 free.lambda<-gls(v~Canine,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
+	 		 free.lambda<-gls(v~Canine,correlation=corPagel(1,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
 	 		 l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -277,11 +279,11 @@ for(i in 4:22)
 	 	      } 
 	 		}else
 	 		{
-	 		 t1<-try(gls(v~Canine,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
+	 		 t1<-try(gls(v~Canine,correlation=corPagel(0,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf))
 	 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 	 if(loadError==F)
 	 			{
-	 		  	 free.lambda<-gls(v~Canine,correlation=corPagel(l,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
+	 		  	 free.lambda<-gls(v~Canine,correlation=corPagel(0,phy=tree,form=~Species,fixed=FALSE),method="ML",dtf)
 	 		  	 l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -299,7 +301,7 @@ for(i in 4:22)
 	 	      } 
 	 			}else
 	 			{
-	 			 free.lambda<-gls(v~Canine,correlation=corPagel(l,phy=tree,form=~Species,fixed=TRUE),method="ML",dtf)
+	 			 free.lambda<-fix.lambda
 	 			}
 	 	 	}
 	 	 }
@@ -390,11 +392,11 @@ for(i in 2:22)
 	 	      } 
 	 	}else
 	 	{
-	 	 t1<-try(gls(v~TestesnoT,correlation=corPagel(l,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT))
+	 	 t1<-try(gls(v~TestesnoT,correlation=corPagel(1,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT))
 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 if(loadError==F)
 	 		{
-	 		 free.lambda<-gls(v~TestesnoT,correlation=corPagel(l,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT)
+	 		 free.lambda<-gls(v~TestesnoT,correlation=corPagel(1,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT)
 	 		 l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -412,11 +414,11 @@ for(i in 2:22)
 	 	      } 
 	 		}else
 	 		{
-	 		 t1<-try(gls(v~TestesnoT,correlation=corPagel(l,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT))
+	 		 t1<-try(gls(v~TestesnoT,correlation=corPagel(0,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT))
 	 	 	 loadError<-(is(t1,'try-error')|is(t1,'error'))
 		 	 if(loadError==F)
 	 			{
-	 		  	 free.lambda<-gls(v~TestesnoT,correlation=corPagel(l,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT)
+	 		  	 free.lambda<-gls(v~TestesnoT,correlation=corPagel(0,phy=treenoT,form=~Species,fixed=FALSE),method="ML",dtfnoT)
 	 		    l2<-attr(free.lambda$apVar,"Pars")[1]
 	 	       if(is.null(l2))
 	 	      {
@@ -434,7 +436,7 @@ for(i in 2:22)
 	 	      } 
 	 			}else
 	 			{
-	 			 free.lambda<-gls(v~TestesnoT,correlation=corPagel(l,phy=treenoT,form=~Species,fixed=TRUE),method="ML",dtfnoT)
+	 			 free.lambda<-fix.lambda
 	 			}
 	 	 	}
 	 	 }
@@ -483,3 +485,224 @@ for(i in 2:22)
 testes.results
 ````
 
+reimport the data to use unscaled version
+this is for analysis using canonical correspondence in vegan
+
+````{r}
+df<-read.csv("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/S5-primdfall.csv")
+treenoT<-read.nexus("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/treenoT.nex")
+
+###Vegan does not use phylogeny so no need to match tip labels... Using older code with labels already designed for given data
+###Follow original work
+Mass<-resid(lm(log(massm)~log(massf),df))
+Canine<-resid(lm(log(k9m)~log(k9f),df))
+Testes<-resid(lm(log(testes)~log(masst),na.action=na.exclude,df))
+TestesnoT<-Testes[complete.cases(Testes)]
+dtf<-data.frame(Testes,Mass,Canine,df[,8:25])
+rownames(dtf)<-df$Species
+hre<-prcomp(dtf[,4:21])
+###HRE PCA output is the same as before. The first dimension is the most appropriate to use
+PC_ARE<-hre$x[,1]
+dtf<-data.frame(dtf,PC_ARE)
+dtf$Species<-df$Species
+rownames(dtf)<-dtf$Species
+dtfnoT<-dtf[complete.cases(dtf),]
+````
+
+split data frame into hres and physical traits
+
+````{r}
+hre.set<-dtfnoT[,4:21]
+trait.set<-dtfnoT[,1:3]
+````
+
+Using CCorA
+
+````{r}
+veg.cca<-cca(hre.set~.,data=trait.set)
+
+##find marginal effects
+
+anova(veg.cca, by= 'margin', permutations = 10000)
+
+##find significant CCA
+
+anova(veg.cca, by= 'axis', permutations = 10000)
+
+##find significant terms
+
+anova(veg.cca, by= 'terms', permutations = 10000)
+
+##investigate full CCA
+
+summary(veg.cca)
+
+````
+
+ploting of CCorA
+
+````{r}
+library(shape)
+spcol<-c("deeppink2","deeppink2","deeppink2","darkgoldenrod3","darkgoldenrod3","darkgoldenrod3","cyan3","cyan3","cyan3","darkgoldenrod3","darkgoldenrod3","darkgoldenrod3","darkgoldenrod3","darkgoldenrod3","darkgoldenrod3","cyan3","cyan3","cyan3","darkgoldenrod3","cyan3","deeppink2","darkgoldenrod3","darkgoldenrod3")
+sigsiz<-c(1.25,1.25,1.25,1.25,1.25,2,2,2,1.25,1.75,1.25,1.25,1.25,1.25,1.75,1.25,1.25,1.25)
+sigcol<-c("black","black","black","black","black","blue","blue","blue","black","red","black","black","black","black","red","black","black","black")
+setEPS()
+postscript("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/CCorrelation.eps")
+par(mfrow=c(2,2),mar=c(4,4,.5,.5))
+plot(veg.cca$CCA$v[,2:1],type="n",xlim=c(-1,1),ylim=c(-1,1),cex.lab=1.25,cex.axis=1)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.cca$CCA$u),y=(veg.cca$CCA$u[,1])*.4,x=(veg.cca$CCA$u[,2])*.4,cex=0.5,col=spcol)
+text(rownames(veg.cca$CCA$v),y=(veg.cca$CCA$v[,1])*.28,x=(veg.cca$CCA$v[,2])*.28,cex=sigsiz*.6,col=sigcol)
+text("Canine",x=0.5,y=.86,cex=1.1)
+text("Testis",x=0.6,y=.50,cex=1.1)
+text("Mass",x=.93,y=-0.05,cex=1.1)
+Arrows(0,0,veg.cca$CCA$biplot[2,2],veg.cca$CCA$biplot[2,1],lwd=1.25)
+Arrows(0,0,veg.cca$CCA$biplot[1,2],veg.cca$CCA$biplot[1,1],lwd=1.25)
+Arrows(0,0,veg.cca$CCA$biplot[3,2],veg.cca$CCA$biplot[3,1],lwd=1.25)
+text("A",x=-.95,y=.95,cex=2.5)
+plot(veg.cca$CCA$v[,c(3,1)],type="n",xlim=c(-1,1),ylim=c(-1,1),cex.lab=1.25,cex.axis=1)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.cca$CCA$u),y=(veg.cca$CCA$u[,1])*.4,x=(veg.cca$CCA$u[,3])*.4,cex=0.5,col=spcol)
+text(rownames(veg.cca$CCA$v),y=(veg.cca$CCA$v[,1])*.28,x=(veg.cca$CCA$v[,3])*.28,cex=sigsiz*.6,col=sigcol)
+text("Canine",x=0.41,y=.88,cex=1.1)
+text("Testis",x=-.71,y=.52,cex=1.1)
+text("Mass",x=.57,y=-.02,cex=1.1)
+Arrows(0,0,veg.cca$CCA$biplot[2,3],veg.cca$CCA$biplot[2,1],lwd=1.25)
+Arrows(0,0,veg.cca$CCA$biplot[1,3],veg.cca$CCA$biplot[1,1],lwd=1.25)
+Arrows(0,0,veg.cca$CCA$biplot[3,3],veg.cca$CCA$biplot[3,1],lwd=1.25)
+text("B",x=-.95,y=.95,cex=2.5)
+dev.off()
+````
+
+````{r}
+cca.phy<-phyl.cca(treenoT,trait.set,hre.set,fixed=FALSE)
+cca.phy
+
+## Significance tests indicates all three axes explain variation, but axes 2 and 3 cannot on their own
+##noticed lambda is close to zero and many of ARE do not have phylogenic correlations independently
+
+##use vegan package to do correlation analysis for easier time manipulating data
+
+veg.ccora<-CCorA(hre.set,trait.set, stand.X = TRUE, stand.Y = TRUE, permutations = 10000)
+veg.ccora
+````
+
+Plot the CCA
+````{r}
+setEPS()
+postscript("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/CCorrespondence.eps")
+par(mfrow=c(2,2),mar=c(4,5,0.5,0.5))
+plot(veg.ccora$corr.X.Cx[,1],veg.ccora$corr.X.Cx[,2],col="white",xlab="CCorA1",ylab="CCorA2",xlim=c(-1,1),ylim=c(1,-1),cex.axis=1,cex.lab=1.25)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.ccora$Cx),x=veg.ccora$Cx[,1]*.4,y=veg.ccora$Cx[,2]*.4, cex = 0.5, col = spcol)
+text("A",x=-.95,y=-.95,cex=2.5)
+Arrows(x0=0,y0=0,x1=veg.ccora$corr.X.Cx[,1],y1=veg.ccora$corr.X.Cx[,2],lwd=1.25)
+text(rownames(veg.ccora$corr.X.Cx),x=veg.ccora$corr.X.Cx[,1],y=veg.ccora$corr.X.Cx[,2]-0.08,cex =1.1)
+plot(veg.ccora$corr.Y.Cy[,1],veg.ccora$corr.Y.Cy[,2],col="white",xlab="CCorA1",ylab="CCorA2",xlim=c(-1,1),ylim=c(1,-1),cex.axis=1,cex.lab=1.25)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.ccora$Cy),x=veg.ccora$Cy[,1]*0.4,y=veg.ccora$Cy[,2]*0.4, cex = 0.5, col = spcol)
+text(rownames(veg.ccora$corr.Y.Cy),x=veg.ccora$corr.Y.Cy[,1]*1.5,y=veg.ccora$corr.Y.Cy[,2]*1.5, cex = sigsiz*.6, col = sigcol)
+text("B",x=-0.95,y=-.95,cex=2.5)
+plot(veg.ccora$corr.X.Cx[,3],veg.ccora$corr.X.Cx[,2],col="white",xlab="CCorA3",ylab="CCorA2",xlim=c(-1,1),ylim=c(1,-1),cex.axis=1,cex.lab=1.25)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.ccora$Cx),x=veg.ccora$Cx[,3]*.4,y=veg.ccora$Cx[,2]*.4, cex = 0.5, col = spcol)
+Arrows(x0=0,y0=0,x1=veg.ccora$corr.X.Cx[,3],y1=veg.ccora$corr.X.Cx[,2],lwd=1.25)
+text(rownames(veg.ccora$corr.X.Cx),x=veg.ccora$corr.X.Cx[,3],y=veg.ccora$corr.X.Cx[,2]-0.08,cex =1.1)
+text("C",x=-0.95,y=-.95,cex=2.5)
+plot(veg.ccora$corr.Y.Cy[,2],veg.ccora$corr.Y.Cy[,3],col="white",xlab="CCorA3",ylab="CCorA2",xlim=c(-1,1),ylim=c(1,-1),cex.axis=1,cex.lab=1.25)
+abline(h=0,lty=2,col="gray65")
+abline(v=0,lty=2,col="gray65")
+text(rownames(veg.ccora$Cy),x=veg.ccora$Cy[,3]*.4,y=veg.ccora$Cy[,2]*0.4, cex = 0.5, col = spcol)
+text(rownames(veg.ccora$corr.Y.Cy),x=veg.ccora$corr.Y.Cy[,3]*1.5,y=veg.ccora$corr.Y.Cy[,2]*1.5, cex = sigsiz*.6, col = sigcol)
+text("D",x=-0.95,y=-.95,cex=2.5)
+dev.off()
+````
+
+Redo the network figure to include the new significant results
+
+````{r}
+library(pegas)
+motif<-read.dna("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/motifs.fasta",format = "fasta")
+mot<-haplotype(motif)
+rownames(mot)<-rownames(motif)
+motnet<-haploNet(mot)
+back<-c("dodgerblue","gray72","red","gray72","gray72","gray72","red","gray72","gray72","gray72","gray72","gray72","dodgerblue","dodgerblue","gray72","gray72","gray72","gray72")
+fon.val=c(3,3,3,2,2,3,3,2,2,3,3,3,2,3,3,3,2,3)
+wid<-c(5,5,5,5,5,5,3,3,3,3,3,3,1,1,1,1,0.5)
+setEPS()
+postscript("/Users/andersond/Desktop/My Pubs/Primate/Evolution/resubwork/Haplonetwork.eps")
+par(mfrow=c(1,1),mar=c(1,1,1,1))
+plot(motnet,size=2.5,show.mutation=1,fast=FALSE,threshold=c(0,1),scale.ratio=1,cex=.8,lty=1,lwd=wid,bg=back,font=fon.val)
+dev.off()
+````
+
+Cluster analysis for CCA hre values (all three dimensions)
+````{r}
+library(NbClust)
+library(mclust)
+nb <- NbClust(as.matrix(veg.cca$CCA$v[,1:3]), diss=NULL, distance = "euclidean", min.nc=2, max.nc=10, method = "kmeans", index = "all", alphaBeale = 0.1)
+wss <- sapply(1:16, function(k){kmeans(veg.cca$CCA$v[,1:3], k, nstart=50,iter.max = 16 )$tot.withinss})
+wss
+d_clust <- Mclust(as.matrix(veg.cca$CCA$v[,1:3]), G=1:8, modelNames = mclust.options("emModelNames"))
+d_clust$BIC
+````
+
+5 or 6 looks like the best
+````{r}
+k.cca.hre5<-kmeans(veg.cca$CCA$v[,1:3],centers = 5, iter.max = 1000, nstart = 25)
+k.cca.hre5
+k.cca.hre6<-kmeans(veg.cca$CCA$v[,1:3],centers = 6, iter.max = 1000, nstart = 25)
+k.cca.hre6
+````
+
+Cluster analysis for CCA species values (all three dimensions)
+````{r}
+nb <- NbClust(as.matrix(veg.cca$CCA$u[,1:3]), diss=NULL, distance = "euclidean", min.nc=2, max.nc=10, method = "kmeans", index = "all", alphaBeale = 0.1)
+wss <- sapply(1:16, function(k){kmeans(veg.cca$CCA$u[,1:3], k, nstart=50,iter.max = 16 )$tot.withinss})
+wss
+d_clust <- Mclust(as.matrix(veg.cca$CCA$u[,1:3]), G=1:8, modelNames = mclust.options("emModelNames"))
+d_clust$BIC
+````
+
+3 or 6 looks like the best
+````{r}
+k.cca.hre3<-kmeans(veg.cca$CCA$u[,1:3],centers = 3, iter.max = 1000, nstart = 25)
+k.cca.hre3
+k.cca.hre6<-kmeans(veg.cca$CCA$u[,1:3],centers = 6, iter.max = 1000, nstart = 25)
+k.cca.hre6
+````
+
+Do the same for CCorA
+```{r}
+nb <- NbClust(as.matrix(veg.ccora$corr.Y.Cx[,1:3]), diss=NULL, distance = "euclidean", min.nc=2, max.nc=10, method = "kmeans", index = "all", alphaBeale = 0.1)
+wss <- sapply(1:16, function(k){kmeans(veg.ccora$corr.Y.Cx[,1:3], k, nstart=50,iter.max = 16 )$tot.withinss})
+wss
+d_clust <- Mclust(as.matrix(veg.ccora$corr.Y.Cx[,1:3]), G=1:8, modelNames = mclust.options("emModelNames"))
+d_clust$BIC
+````
+
+````{r}
+k.ccora.hre<-kmeans(veg.ccora$corr.Y.Cx[,1:3],centers=5,iter.max=1000,nstart=25)
+k.ccora.hre
+````
+
+````{r}
+nb <- NbClust(as.matrix(veg.ccora$Cx[,1:3]), diss=NULL, distance = "euclidean", min.nc=2, max.nc=10, method = "kmeans", index = "all", alphaBeale = 0.1)
+wss <- sapply(1:16, function(k){kmeans(veg.ccora$Cx[,1:3], k, nstart=50,iter.max = 16 )$tot.withinss})
+wss
+d_clust <- Mclust(as.matrix(veg.ccora$Cx[,1:3]), G=1:8, modelNames = mclust.options("emModelNames"))
+d_clust$BIC
+````
+
+
+````{r}
+k.ccora.sp3<-kmeans(veg.ccora$Cx[,1:3],centers=3,iter.max=1000,nstart=25)
+k.ccora.sp3
+k.ccora.sp6<-kmeans(veg.ccora$Cx[,1:3],centers=6,iter.max=1000,nstart=25)
+k.ccora.sp6
+````
